--- a/client/index.html
+++ b/client/index.html
@@ -1,59 +1,41 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Zodiac App</title>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width,initial-scale=1">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-        <link rel="stylesheet" type="text/css" href="./css/styles.css" >
-        <script type="text/javascript" src="./js/script.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-    </head>
-
-    <body>
-        <nav class="navbar bg-dark" data-bs-theme="dark">
-            <nav class="navbar navbar-expand-lg bg-body-tertiary">
-                <div class="container-fluid">
-                  <a class="navbar-brand" href="#">Navbar</a>
-                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                  </button>
-                  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                      <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
-                      </li>
-                    </ul>
-                    <form class="d-flex" role="search">
-                      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                      <button class="btn btn-outline-success" type="submit">Search</button>
-                    </form>
-                  </div>
-                </div>
-              </nav>
-          </nav>
-    <div class="container">
-        <h1>Welcome to Zodiac App</h1>
-    </div>
-    <div class="row">
-        <div class="col-md-4">
-            <h3>Zodiac name display here</h3>
-            <p>You will enter name zodiac here</p>
-        </div>
-        <img src="https://www.pinkvilla.com/imageresize/active_and_receptive_zodiac_signs.jpg?width=752&t=pvorg" class="img-responsive" length="300" height="400">
-        <hr>
-        <form>
-            <div class="form-group">
-                <input type="text" id="user-search" class="form-control" placeholder="Type zodiac-name...">
-            </div>
-            <div class="form-group">
-                <button class="btn btn-danger" type="button">Find</button>
-            </div>
-        </form>
-        <div class="col-md-4">
-            <p>Result will display here</p>
-        </div>
-    </div>
-
-    </body>
+<head>
+     <title>Zodiac App</title>
+     <meta charset="utf-8">
+     <meta name="viewport" content="width=device-width,initial-scale=1">
+     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+     <link rel="stylesheet" type="text/css" href="/css/styles.css">
+     <script type="text/javascript" src="/js/scripts.js"></script>
+     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+</head>
+<body>
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand" href="/">Zodiac App</a>
+</nav>
+     <div class="container">
+     	 <h1>Welcome to Zodiac App</h1>
+     	 <div class="row">
+     	 	<div class="col-md-4">
+     	 		<img src="/images/zodiac.jpg" class="img-responsive">
+     	 		<hr>
+     	 		<form>
+     	 			<div class="form-group">
+     	 				<input type="text" id="user-search" class="form-control" 
+     	 				placeholder="Type zodiac name ...">
+     	 			</div>
+     	 			<div class="form-group">
+     	 				<button class="btn btn-danger" onclick="getData()" type="button">Find</button>
+     	 			</div>
+     	 		</form>
+     	 	</div>
+     	 	<div class="col-md-4">
+     	 		<img id="img">
+     	 		<p id="text-result"></p>
+     	 	</div>
+     	 </div>
+     </div>
+</body>
 </html>
