Made certain changes with styling

--- a/client/index.html
+++ b/client/index.html
@@ -19,7 +19,7 @@
      	 <h1>Welcome to Zodiac App</h1>
      	 <div class="row">
      	 	<div class="col-md-4">
-     	 		<img src="/images/zodiac.jpg" class="img-responsive">
+     	 		<img src="/images/zodiac.jpg" class="img-thumbnail">
      	 		<hr>
      	 		<form>
      	 			<div class="form-group">
@@ -34,7 +34,8 @@
      	 	<div class="col-md-4">
 				<h2 id="name"></h2>
 				<h4 id="date"></h4>
-     	 		<img id="img" class ="img-responsive" width="300px">
+     	 		<img id="img" class="img-thumbnail">
+				<hr>
      	 		<p id="text-result"></p>
      	 	</div>
      	 </div>
